projects/packages/forms/src/blocks/contact-form/editor.scss
/* ... */
.jetpack-contact-form .components-placeholder {
	padding: 24px;

	input[type='text'] {
		width: 100%;
		outline-width: 0;
		outline-style: none;
		line-height: 16px;
	}

	.components-placeholder__label svg {
		margin-right: 1ch;
	}

	.help-message,
	.components-placeholder__fieldset {
		text-align: left;
		max-width: none;
	}

	.help-message {
		width: 100%;
		margin: 0 0 1em;
	}

	.components-base-control {
		width: 100%;
	}
}

.jetpack-contact-form.is-placeholder {
	background-color: white;
	border: 1px solid #1e1e1e;
	padding: 24px;

	.components-placeholder {
		box-shadow: unset;
		padding: 0;
		margin-bottom: 16px;
	}

	.block-editor-block-variation-picker__variation {
		svg path:not(.icon-filler) {
			fill: currentColor;
		}
	}

	.form-placeholder__footer {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		gap: 12px;

		@include break-small() {
			flex-direction: row;
			justify-content: space-between;
		}
	}

	.form-placeholder__footer-links {
		font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
		display: flex;
		flex-direction: column;
		align-items: center;

		@include break-small() {
			align-items: flex-end;
		}
	}

	.form-placeholder__external-link {
		font-size: 13px;
		padding: 0;
		font-weight: 400;

		&, &:hover, &:active, &:focus {
			background-color: unset;
			color: var(--wp-admin-theme-color)
		}

		svg {
			width: 1.4em;
			height: 1.4em;
			margin-left: 2px;
		}
	}
}

.form-placeholder__patterns-modal {
	max-width: 1200px;

	@include break-small() {
		width: calc(100% - #{ $grid-unit-20 * 2 });
		height: calc(100% - #{ $header-height * 2 });
	}
	@include break-medium() {
		width: $break-medium - $grid-unit-20 * 2;
	}
	@include break-large() {
		height: 80%;
		width: 80%;
		max-height: none;
	}

	.components-modal__content {
		padding: 0;
		margin-bottom: 60px;

		.view-mode-carousel {
			.carousel-container {
				margin-bottom: 20px;
			}

			.pattern-slide {
				border: 1px solid #ddd;
			}

			.block-editor-block-pattern-setup__container {
				padding: 0 32px;
			}
		}
	}

	.block-editor-block-pattern-setup__grid .block-editor-block-pattern-setup__container {
		padding-bottom: 72px;
	}
}

.jetpack-contact-form__intro-message {
	margin: 0 0 16px;
}

.jetpack-contact-form__create {
	width: 100%;
}

.jetpack-contact-form__thankyou-redirect-url {
	min-width: auto;
}

.jetpack-contact-form__thankyou-redirect-url input[type='text'] {
	width: 100%;
}

.jetpack-contact-form__thankyou-redirect-url__suggestions {
	width: 230px;
}

.jetpack-contact-form__integration-panel {
	button {
		margin-top: 1em;
	}
}

.jetpack-field-label {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-items: baseline;

	.components-base-control {
		margin-top: -1px;
		margin-bottom: -3px;

		&.jetpack-field-label__required {
			.components-form-toggle {
				margin: 2px 8px 0 16px;
			}

			.components-toggle-control__label {
				word-break: normal;
			}
		}
	}

	.rich-text.jetpack-field-label__input {
		cursor: text;
		font-weight: bold;
		margin-bottom: 0.25em;
	}

	.jetpack-field-label__suffix {
		margin-inline-start: 0.25em;

		font-weight: 700;
	}

	.required {
		word-break: normal;
		color: unset;
		opacity: 0.6;
		font-size: 85%;
		margin-inline-start: 0.25em;
		font-weight: normal;
	}

	.components-toggle-control .components-base-control__field {
		margin-bottom: 0;
	}
}

.jetpack-field-label__input {
	min-height: unset;

	padding: 0;
}

.jetpack-field__textarea {
	min-height: 200px;
}
/* ... */

